--- a/.github/workflows/deploy-environments.yml
+++ b/.github/workflows/deploy-environments.yml
@@ -84,6 +84,7 @@ jobs:
       - name: Configure AWS credentials
         id: configure_aws
         if: env.AWS_STAGING_ROLE_ARN != ''
+        continue-on-error: true
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ env.AWS_STAGING_ROLE_ARN }}
