--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "scipy>=1.16.2",
     "pandas>=2.3.3",
     "networkx>=3.5",
+    "SQLAlchemy>=2.0.36",
     "pydantic>=2.12.1,<3.0.0",
     "pydantic-settings>=2.11.0,<3.0.0",
     "pandera>=0.20.4,<0.27",
@@ -44,6 +45,8 @@ dependencies = [
     "tenacity>=9.1.2",
     "aiolimiter>=1.2.1",
     "fastapi>=0.119.0,<1.0.0",
+    "alembic>=1.14.0",
+    "psycopg[binary]>=3.2.3",
     "PyJWT[crypto]>=2.9.0",
     "uvicorn>=0.37.0",
     "jinja2>=3.1.6",
