--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ numpy>=2.3.3
 scipy>=1.16.2
 pandas>=2.3.3
 networkx>=3.5
+SQLAlchemy>=2.0.36
 
 # Data validation
 pydantic>=2.12.1,<3.0.0
@@ -25,6 +26,8 @@ ccxt>=4.5.10
 tenacity>=9.1.2
 aiolimiter>=1.2.1
 fastapi>=0.119.0,<1.0.0
+alembic>=1.14.0
+psycopg[binary]>=3.2.3
 
 # Optional feature store backends are available via `pip install tradepulse[feature_store]`
 
