--- a/ui/dashboard/package.json
+++ b/ui/dashboard/package.json
@@ -11,8 +11,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
+    "@testing-library/dom": "^10.4.0",
     "eslint": "^9.14.0",
     "globals": "^15.12.0",
+    "jsdom": "^24.1.1",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.12.2"
   }
