docs: add DLP and retention policy playbook

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -87,6 +87,7 @@ nav:
       - Program Overview: ../SECURITY.md
       - Production Security Architecture: security/architecture.md
       - Identity and Access Management: security/iam.md
+      - Data Loss Prevention & Retention: security/dlp_and_retention.md
       - Rate Limits & Host Protection: rate-limits-and-host-protection.md
   - Governance Records:
       - Architecture Decision Records: adr/index.md
