--- a/conf/experiment/prod.yaml
+++ b/conf/experiment/prod.yaml
@@ -1,19 +1,25 @@
+# SPDX-License-Identifier: MIT
+# Production deployment Hydra profile.
+
+defaults:
+  - base
+
 name: prod
 db_uri: "postgresql://prod:${PROD_DB_PASSWORD:-secure}@host/prod?sslmode=verify-full"
 db_tls:
   ca_file: ${PROD_DB_CA_FILE:-/etc/tradepulse/db/root-ca.pem}
   cert_file: ${PROD_DB_CERT_FILE:-/etc/tradepulse/db/client.crt}
   key_file: ${PROD_DB_KEY_FILE:-/etc/tradepulse/db/client.key}
-debug: false
 log_level: WARNING
 random_seed: 7
+
 data:
   price_csv: /mnt/prod_data/prices.csv
-  price_column: price
+
 analytics:
   window: 512
   bins: 64
   delta: 0.0025
+
 tracking:
-  enabled: true
   base_dir: /mnt/prod_runs
