--- a/conf/experiment/stage.yaml
+++ b/conf/experiment/stage.yaml
@@ -1,19 +1,20 @@
+# SPDX-License-Identifier: MIT
+# Staging deployment Hydra profile.
+
+defaults:
+  - base
+
 name: stage
 db_uri: "postgresql://stage:${STAGE_DB_PASSWORD:-secure}@host/stage?sslmode=verify-full"
 db_tls:
   ca_file: ${STAGE_DB_CA_FILE:-/etc/tradepulse/db/root-ca.pem}
   cert_file: ${STAGE_DB_CERT_FILE:-/etc/tradepulse/db/client.crt}
   key_file: ${STAGE_DB_KEY_FILE:-/etc/tradepulse/db/client.key}
-debug: false
 log_level: INFO
 random_seed: 2024
+
 data:
   price_csv: /mnt/stage_data/prices.csv
-  price_column: price
-analytics:
-  window: 256
-  bins: 48
-  delta: 0.005
+
 tracking:
-  enabled: true
   base_dir: /mnt/stage_runs
