feat(execution): add Kraken spot REST connector

--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,7 @@ COINBASE_SANDBOX=true
 # Kraken
 KRAKEN_API_KEY=your_kraken_api_key_here
 KRAKEN_API_SECRET=your_kraken_api_secret_here
+KRAKEN_OTP=optional_totp_code_if_enabled
 
 # =============================================================================
 # Data Providers
