docs: add zero downtime schema migration playbook

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -78,6 +78,7 @@ nav:
       - Scaling: scaling.md
       - Chaos Testing (GameDay): resilience.md
       - Reliability Targets: reliability.md
+      - Zero-Downtime Schema Migrations: zero_downtime_schema_migrations.md
       - Incident Playbooks: incident_playbooks.md
       - Live Trading Runbook: runbook_live_trading.md
       - Data Incident Runbook: runbook_data_incident.md
