docs: add release validation runbook

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -82,6 +82,7 @@ nav:
       - Incident Playbooks: incident_playbooks.md
       - Live Trading Runbook: runbook_live_trading.md
       - Data Incident Runbook: runbook_data_incident.md
+      - Release Validation Runbook: runbook_release_validation.md
       - Governance and Data Controls: governance.md
       - Deployment: deployment.md
       - Canary Release Guardrails: canary_release_guardrails.md
